# brain-lit

./: .dockerignore  .gitignore  AI_ALPHA_GENERATION.md  Dockerfile  IMPLEMENTATION_PLAN.md  PROJECT_ROADMAP.md  README.md  app.py  db.sql  db_create.sql  gen_by_submitted.py  main.py  pyproject.toml  sidebar.py
ai/: alpha_desc_updater.py  alpha_operators.json  alpha_operators.py  ask_ai.py  backtest_alpha.py  fetch_platform_content.py  fetch_restricted_doc.py  full_alpha_process.py  generate_alpha_by_ai.py  generate_alpha_with_content.py  get_alpha_details.py  get_children_details.py  get_simulation_details.py  monitor_simulation.py  sentiment_datasets_guide.txt  start_guide.py
alpha_desc/: alpha_desc_updater.py
pages/: 1_alpha_generate.py  2_alpha_simulate.py  3_alpha_check.py  4_alpha_submit.py  5_risk_neutralization.py  6_high_level_alpha_gen.py  home.py  login.py
src/brain_lit/: __init__.py  app.py  auth.py  logger.py  login_page.py  main.py  main_page.py  sidebar.py
src/brain_lit/alpha_desc/: alpha_desc_updater.py  ask_ai.py
src/brain_lit/pages/: 1_alpha_generate.py  2_alpha_simulate.py  3_alpha_check.py  3_alpha_submit.py  4_risk_neutralization.py  5_alpha_submit.py
src/brain_lit/svc/: alpha_builder.py  alpha_query.py  auth.py  check.py  database.py  datafields.py  dataset.py  (+2 more)
svc/: alpha_builder.py  alpha_query.py  auth.py  check.py  database.py  datafields.py  dataset.py  logger.py  neutralize.py  simulate.py  submit.py
tests/: test_check_and_submit.py  test_database.py  test_main.py  test_neutralize.py  test_phase2_gen.py  test_simulation.py
