[project]
name = "brain-lit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "streamlit>=1.49.1",
    "streamlit-js-eval>=0.1.7",
    "mysql-connector-python>=9.1.0",
    "pandas>=2.2.0",
    "openai>=2.2.0",
]

[project.scripts]
brain-lit = "app:main"
brain-lit-app = "app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
